Fri Dec  6 17:50:57 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpixmap.c (PACKED_COLOR): Fix incorrect
	masks in PACKED_COLOR definition. (#99795, 
	John Finlay)

Fri Dec  6 17:46:42 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_window_size_request): Use
	the correct screen for getting the height.
	(Fix from Stephen Browne, #96777)

Thu Dec  5 16:01:14 2002  Eric Warmenhoven <eric@warmenhoven.org>

	* gdk/{linux-fb,win32}/Makefile.am: Fix gdkenumtypes.h hack

2002-12-06  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdkcolor.c: 
	* gdk/gdkfont.c: Add some Deprecation info. 

Wed Dec  4 19:41:14 2002  Eric Warmenhoven <eric@warmenhoven.org>

	* gdk/linux-fb/gdkglobals-fb.c gdk/linux-fb/gdkkeyboard-fb.c
	gdk/linux-fb/gdkmain-fb.c gdk/linux-fb/gdkprivate-fb.h
	gdk/linux-fb/gdkrender-fb.c: More proper vt switch handling

Wed Dec  4 14:31:46 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdnd-x11.c: Always look up and create the
	Motif drag window as a child of the root window of screen 0
	rather than the default screen.	(#100362, Erwann Chenede)

	* gdk/x11/gdkdnd-x11.c (motif_read_initiator_info):
	Return FALSE, not GDK_FILTER_REMOVE on failure; this
	isn't a filter function.
	
	* gdk/x11/gdkselection-x11.c gtk/gtkselection.c: Add
	some g_return_if_fail() to catch selection == None more 
	gracefully than an X error.

2002-12-04  Christian Neumair  <chris@gnome-de.org>

	* gtk/gtkcellrendertoggle.c: Fixed typo in property
	description.

Wed Dec  4 12:44:50 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcombo.c (gtk_combo_selection_changed): Add
	back the monitoring of the selection when the combo
	isn't popped down; apparently people depended upon
	the side-effect where gtk_combo_set_popdown_strings()
	would wipe out the contents of the list when browse-mode
	autoselected the first item in the list. (#100347)

Tue Dec  3 17:47:24 2002  Owen Taylor  <otaylor@redhat.com>
